--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 				<table>
 					<thead>
 					<tr>
-						<caption>Nested Table 2</caption>
+						<th colspan="2">Nested Table 2</th>
 						<tr>
 							<th>Column 1</th>
 							<th>Column 2</th>
@@ -30,7 +30,7 @@
 	  <td>
 		  <table>
 			  <tr>
-				  <th><caption>Nested Table 1</caption></th>
+				  <th colspan="2">Nested Table 1</th>
 			  </tr>
 			  <tr>
 				  <td>
@@ -48,7 +48,7 @@
 			<td>
 				<table>
 					<tr>
-						<th><caption>Nested Table 3</caption></th>
+						<th colspan="2">Nested Table 3</th>
 					</tr>
 					<tr>
 						<td><a href="">Nested Table</a></td>
@@ -58,7 +58,7 @@
 			</td>
 			<td>
 				<table>
-					<tr><th><caption>Nested Table 4</caption></th></tr>
+					<tr><th colspan="2">Nested Table 4</th></tr>
 					<tr><td id="last">HTML</td></tr>
 				</table>
 			</td>
